@@ -25,6 +25,7 @@ Bugs fixed:
 - 3585274 Local connect kills tracing
 - 3528056 sfcbd --version doesn't always work
 - 3381209 Memory leak inside getClass() used by invokeMethod()
+- 3588557 Object path in deliverIndication can remain resident
 
 Changes in 1.3.15
 =================
